--- a/src/app/main/pages/principal/principal.component.html
+++ b/src/app/main/pages/principal/principal.component.html
@@ -1,1 +1,3 @@
   <general-miga [items]="breadcrumbItems"></general-miga>
+  <titulo-tramite [title]="titulo" [subtitle]="subitulo"></titulo-tramite>
+ <app-definicion></app-definicion>
