--- a/src/app/main/pages/principal/principal.component.html
+++ b/src/app/main/pages/principal/principal.component.html
@@ -1,3 +1,7 @@
   <general-miga [items]="breadcrumbItems"></general-miga>
   <titulo-tramite [title]="titulo" [subtitle]="subitulo"></titulo-tramite>
  <app-definicion></app-definicion>
+ <app-acordion></app-acordion>
+ <field-buttons></field-buttons>
+ <app-informacion></app-informacion>
+
