--- a/src/app/main/pages/definicion/definicion.component.html
+++ b/src/app/main/pages/definicion/definicion.component.html
@@ -1,6 +1,6 @@
 <div style="margin-top: 40px;">
 <p-fieldset legend="¿ Qué es y Para que Sirve ?">
-  <p class="m-0" style="font-style: verdana; font-size: 16px;">
+  <p class="m-0" style="font-family: Verdana-Regular; font-size: 16px;">
     Verificar que las características de inspección, vigilancia y control cumplan con los estándares y requisitos establecidos en la normatividad sanitaria vigente.
   </p>
 </p-fieldset>
