--- a/src/app/main/pages/buttons/buttons.component.html
+++ b/src/app/main/pages/buttons/buttons.component.html
@@ -2,15 +2,18 @@
 
   <div class="d-flex flex-row gap-4 p-3 justify-content-center flex-wrap govco-bg-cobalt">
     <!-- Botón mixto - Contenido invertido -->
+    <a routerLink="./establecimientos/registrar" style="text-decoration: none;">
     <button type="button" class="btn-govco fill-secundary-btn-govco icon-btn-govco" style="width: 250px; height: 42px;">
-      <span>Realizar Inscripción</span>
+      <span>Inscribirme</span>
       <span class="govco-icon govco-arrow-circle-right" aria-hidden="true"></span>
     </button>
-    <!-- Botón mixto - Contorno invertido
-    <button type="button" class="btn-govco outline-secundary-btn-govco icon-btn-govco" style="width: 165px; height: 42px;">
-      <span class="govco-svg govco-arrow-circle-left" aria-hidden="true"></span>
-      <span>Botón</span>
-    </button> -->
+    </a>
+    <a routerLink="./establecimientos" style="text-decoration: none;">
+    <button type="button" class="btn-govco outline-secundary-btn-govco icon-btn-govco" style="width: 250px; height: 42px;">
+      <span class="govco-svg govco-user" aria-hidden="true"></span>
+      <span>Ya estoy Inscrito</span>
+    </button>
+  </a>
 
   </div>
 </div>
