form inscripcion completo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <general-header></general-header>
+<alert-notification></alert-notification>
 <div class="container">
   <router-outlet></router-outlet>
   <br><br>
