--- a/src/styles.css
+++ b/src/styles.css
@@ -24,3 +24,17 @@
   font-weight: normal;
   font-style: normal;
 }
+
+.swal2-confirm {
+  background-color: #158361 !important; /* Verde */
+  color: white !important;
+}
+
+.swal2-cancel {
+  background-color: #A80521 !important; /* Rojo */
+  color: white !important;
+}
+input[readonly] {
+  background-color: #f5f5f5!important;
+  cursor: not-allowed!important;
+}
