--- a/src/app/main/pages/informacion/informacion.component.html
+++ b/src/app/main/pages/informacion/informacion.component.html
@@ -11,6 +11,7 @@
 
       </p>
     </p-fieldset>
+    <div class="g-recaptcha" data-sitekey="6LeqLBsqAAAAAMr_jpVg79UvIHZAyiOpnwQa_BQ5"></div>
     </div>
 
 
