--- a/src/app/dashboard/pages/crear/crear.component.html
+++ b/src/app/dashboard/pages/crear/crear.component.html
@@ -472,7 +472,11 @@
 </span>
 </div>
 
+
 <div class="col-md-6 mt-4">
+
+  <div class="g-recaptcha" [attr.data-sitekey]="siteKey"></div>
+
   <button
   type="submit"
   class="btn-govco outline-secundary-btn-govco icon-btn-govco"
