cargue certificado planos

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="pie-pagina-govco">
+<div class="pie-pagina-govco mt-8">
   <div class="first-section">
     <h4>Alcaldía de Bucaramanga</h4>
     <div class="logo-container">
