--- a/src/app/dashboard/pages/select-establecimientos/select-establecimientos.component.html
+++ b/src/app/dashboard/pages/select-establecimientos/select-establecimientos.component.html
@@ -8,7 +8,7 @@
 
 <div class="row animate__animated animate__fadeIn animate__slow" *ngIf="!isLoading">
   <form class="form" [formGroup]="myForm" (ngSubmit)="onSubmit()">
-    <h6 class="text-center mt-4">Escoge tu establecimiento verifica Bien tus Datos</h6>
+    <h6 class="text-center mt-4">Escoge tu establecimiento verifica bien tus datos</h6>
     <div class="col-md-12">
       <div class="entradas-de-texto-govco m-2">
         <label for="nit">Establecimiento*</label>
