--- a/src/app/shared/components/alert-notification/alert-notification.component.html
+++ b/src/app/shared/components/alert-notification/alert-notification.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="toast container-toast-govco error show position-fixed top-0 end-0 p-3" id="fixedtoast" data-autohide="false" role="alert"
+<div class="toast container-toast-govco error show position-fixed top-0 end-0 p-3" style="z-index: 2000;" id="fixedtoast" data-autohide="false" role="alert"
     aria-live="assertive" aria-atomic="true" *ngIf="errorMessage">
     <div class="toast-header toast-header-error-govco">
         <span class="govco-icon govco-times-cancel fs-mr" aria-label="info"></span>
