feature textos de definicion

--- a/src/app/main/pages/acordion/acordion.component.html
+++ b/src/app/main/pages/acordion/acordion.component.html
@@ -6,17 +6,15 @@
         data-bs-toggle="collapse" data-bs-target="#accordionIconoPanels-collapseOne" aria-expanded="true"
         aria-controls="accordionIconoPanels-collapseOne">
         <span class="icon-button-accordion-govco">1</span>
-        <span class="text-button-accordion-govco">¿ Quienes deben realizar este tramite ?</span>
+        <span class="text-button-accordion-govco">¿Qué es y cuáles son los conceptos sanitarios que emite las secretarias de salud?</span>
       </button>
     </h2>
     <div id="accordionIconoPanels-collapseOne" class="accordion-collapse collapse show"
       aria-labelledby="accordionIconoPanels-exampleOne" data-bs-parent="#accordionExampleTwo">
       <div class="body-accordion-govco">
-        <span class="title-one-accordion-govco">Todos</span>
-        <span class="title-two-accordion-govco">Cédula de ciudadanía: 1 original(es) en formato válido.</span>
-        <p class="text-one-accordion-govco">En caso de no tener cédula en formato válido podrá presentar:
-          Contraseña de la cédula de ciudadanía de primera vez vigente con foto y huella y la copia del
-          registro civil de nacimiento.</p>
+        <!-- <span class="title-one-accordion-govco">Todos</span>
+        <span class="title-two-accordion-govco">Cédula de ciudadanía: 1 original(es) en formato válido.</span> -->
+        <p class="text-one-accordion-govco">El Concepto Sanitario, es una constancia que la autoridad sanitaria emite una vez realizada la visita de inspección, vigilancia y control de manera presencial y técnica, a los establecimientos de especial interés sanitario, verificando condiciones higiénico sanitarias propias del funcionamiento del establecimiento y de la actividad desarrollada, de acuerdo con la normatividad vigente. Los conceptos sanitarios en el marco del Modelo de IVC en Salud Ambiental que se pueden emitir a un objeto de IVC son:  favorable, favorable con requerimientos, desfavorable..</p>
       </div>
     </div>
   </div>
@@ -26,17 +24,15 @@
         data-bs-toggle="collapse" data-bs-target="#accordionIconoPanels-collapseTwo" aria-expanded="false"
         aria-controls="accordionIconoPanels-collapseTwo">
         <span class="icon-button-accordion-govco">2</span>
-        <span class="text-button-accordion-govco">¿Requiere Pago?</span>
+        <span class="text-button-accordion-govco">¿Cuál es la vigencia de un concepto sanitario?</span>
       </button>
     </h2>
     <div id="accordionIconoPanels-collapseTwo" class="accordion-collapse collapse"
       aria-labelledby="accordionIconoPanels-exampleTwo" data-bs-parent="#accordionExampleTwo">
       <div class="body-accordion-govco">
-        <span class="title-one-accordion-govco">Documento</span>
-        <span class="title-two-accordion-govco">Cédula de ciudadanía: 1 original(es) en formato válido.</span>
-        <p class="text-one-accordion-govco">En caso de no tener cédula en formato válido podrá presentar:
-          Contraseña de la cédula de ciudadanía de primera vez vigente con foto y huella y la copia del
-          registro civil de nacimiento.</p>
+        <!-- <span class="title-one-accordion-govco">Documento</span>
+        <span class="title-two-accordion-govco">Cédula de ciudadanía: 1 original(es) en formato válido.</span> -->
+        <p class="text-one-accordion-govco">El Concepto Sanitario emitido por las autoridades sanitarias no tiene vigencia y no tiene costo, éste se mantiene vigente hasta tanto la secretaria de salud departamental, distrital o municipal (según corresponda los motivos de la visita y programaciones establecidas), expida otro que lo reemplace, como resultado de la evaluación que realice a través de la visita de inspección sanitaria y la situación encontrada en el cumplimiento de las condiciones higiénico sanitarias que la ley establece para cada tipo de establecimiento.</p>
       </div>
     </div>
   </div>
@@ -46,17 +42,16 @@
         data-bs-toggle="collapse" data-bs-target="#accordionIconoPanels-collapseThree" aria-expanded="false"
         aria-controls="accordionIconoPanels-collapseThree">
         <span class="icon-button-accordion-govco">3</span>
-        <span class="text-button-accordion-govco">¿Qué resultado se obtiene?</span>
+        <span class="text-button-accordion-govco">¿Cuáles son los motivos por los que se realizan las visitas sanitarias?</span>
       </button>
     </h2>
     <div id="accordionIconoPanels-collapseThree" class="accordion-collapse collapse"
       aria-labelledby="accordionIconoPanels-exampleThree" data-bs-parent="#accordionExampleTwo">
       <div class="body-accordion-govco">
-        <span class="title-one-accordion-govco">Documento</span>
-        <span class="title-two-accordion-govco">Cédula de ciudadanía: 1 original(es) en formato válido.</span>
-        <p class="text-one-accordion-govco">En caso de no tener cédula en formato válido podrá presentar:
-          Contraseña de la cédula de ciudadanía de primera vez vigente con foto y huella y la copia del
-          registro civil de nacimiento.</p>
+        <!-- <span class="title-one-accordion-govco">Documento</span> -->
+        <span class="title-two-accordion-govco">Las visitas sanitarias por las autoridades sanitarias, se realizan por los siguientes motivos:
+        </span>
+        <p class="text-one-accordion-govco">Programación, Solicitud del interesado, Asociada a peticiones, quejas y reclamos, Solicitud oficial, Evento de Interés en Salud Pública, Solicitud de práctica de pruebas/procesos sancionatorios administrativos</p>
       </div>
     </div>
   </div>
@@ -66,17 +61,69 @@
         data-bs-toggle="collapse" data-bs-target="#accordionIconoPanels-collapseFour" aria-expanded="false"
         aria-controls="accordionIconoPanels-collapseFour">
         <span class="icon-button-accordion-govco">4</span>
-        <span class="text-button-accordion-govco">¿Comó y donde se realiza?</span>
+        <span class="text-button-accordion-govco">¿Qué tipo de sanciones podría recibir un establecimiento que no cumple con la normatividad para su funcionamiento?
+        </span>
       </button>
     </h2>
     <div id="accordionIconoPanels-collapseFour" class="accordion-collapse collapse"
       aria-labelledby="accordionIconoPanels-exampleThree" data-bs-parent="#accordionExampleTwo">
       <div class="body-accordion-govco">
-        <span class="title-one-accordion-govco">Documento</span>
-        <span class="title-two-accordion-govco">Cédula de ciudadanía: 1 original(es) en formato válido.</span>
-        <p class="text-one-accordion-govco">En caso de no tener cédula en formato válido podrá presentar:
-          Contraseña de la cédula de ciudadanía de primera vez vigente con foto y huella y la copia del
-          registro civil de nacimiento.</p>
+        <!-- <span class="title-one-accordion-govco">Documento</span>
+        <span class="title-two-accordion-govco">Cédula de ciudadanía: 1 original(es) en formato válido.</span> -->
+        <p class="text-one-accordion-govco">Las autoridades sanitarias podrán aplicar medidas de seguridad e iniciar un proceso sancionatorio, las sanciones establecidas en el marco normativo Ley 9 de 1979 y Decreto 780 de 2016 son: Artículo 576º.- Podrán aplicarse como medidas de seguridad encaminadas a proteger la salud pública, las siguientes: Clausura temporal del establecimiento, que podrá ser total o parcial; La suspensión parcial o total de trabajos o de servicios;  El decomiso de objetos y productos;  La destrucción o desnaturalización de artículos o productos, si es el caso, y  La congelación o suspensión temporal de la venta o empleo de productos y objetos.</p>
+      </div>
+    </div>
+  </div>
+  <div class="item-accordion-govco">
+    <h2 class="accordion-header" id="accordionIconoPanels-exampleFive">
+      <button class="button-accordion-govco button-number-accordion-govco collapsed" type="button"
+        data-bs-toggle="collapse" data-bs-target="#accordionIconoPanels-collapseFive" aria-expanded="false"
+        aria-controls="accordionIconoPanels-collapseFive">
+        <span class="icon-button-accordion-govco">5</span>
+        <span class="text-button-accordion-govco">¿Qué se debe hacer en caso tener una visita de inspección sanitaria?
+
+        </span>
+      </button>
+    </h2>
+    <div id="accordionIconoPanels-collapseFive" class="accordion-collapse collapse"
+      aria-labelledby="accordionIconoPanels-exampleFive" data-bs-parent="#accordionExampleTwo">
+      <div class="body-accordion-govco">
+        <!-- <span class="title-one-accordion-govco">Documento</span>-->
+        <span class="title-two-accordion-govco">El proveedor o productor deberá tener en cuenta al momento de recibir la visita de inspección sanitaria las siguientes consideraciones:</span>
+        <div class="text-one-accordion-govco">
+          <ol type="A">
+            <li>Recibir la visita, solicitar la identificación del funcionario de la autoridad sanitaria y designar la persona que acompañará la visita.</li>
+            <li>Tener a disposición de las autoridades la información y documentación disponible para el cumplimiento de las condiciones sanitarias.</li>
+            <li>Solicitar al funcionario que realizó la visita, copia del documento resultado de esta (acta de visita)</li>
+            <li>Si tiene alguna inquietud referente a algún hallazgo registrado en el acta solicitar aclaración de esta al funcionario.</li>
+            <li>Del resultado de la visita dependerá o no de establecer acciones de mejoramiento continuo interno para el cumplimiento de las exigencias realizadas por la autoridad sanitaria.
+            </li>
+
+          </ol>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="item-accordion-govco">
+    <h2 class="accordion-header" id="accordionIconoPanels-exampleSix">
+      <button class="button-accordion-govco button-number-accordion-govco collapsed" type="button"
+        data-bs-toggle="collapse" data-bs-target="#accordionIconoPanels-collapseSix" aria-expanded="false"
+        aria-controls="accordionIconoPanels-collapseSix">
+        <span class="icon-button-accordion-govco">6</span>
+        <span class="text-button-accordion-govco">¿Qué costo tienen las visitas sanitarias y el concepto sanitario?
+
+        </span>
+      </button>
+    </h2>
+    <div id="accordionIconoPanels-collapseSix" class="accordion-collapse collapse"
+      aria-labelledby="accordionIconoPanels-exampleSix" data-bs-parent="#accordionExampleTwo">
+      <div class="body-accordion-govco">
+        <!-- <span class="title-one-accordion-govco">Documento</span>-->
+        <span class="title-two-accordion-govco">Sin Costo</span>
+        <p class="text-one-accordion-govco">
+          Las visitas sanitarias y el concepto sanitario no tienen costo.
+
+        </p>
       </div>
     </div>
   </div>
