--- a/src/app/main/pages/definicion/definicion.component.html
+++ b/src/app/main/pages/definicion/definicion.component.html
@@ -1,7 +1,25 @@
-<div style="margin-top: 40px;">
-<p-fieldset legend="¿ Qué es y Para que Sirve ?">
-  <p class="m-0" style="font-family: Verdana-Regular; font-size: 16px;">
-    Verificar que las características de inspección, vigilancia y control cumplan con los estándares y requisitos establecidos en la normatividad sanitaria vigente.
-  </p>
-</p-fieldset>
+<div style="display: flex; flex-wrap: wrap; gap: 16px; margin-top: 40px;">
+  <div class="fieldset-container">
+    <p-fieldset legend="¿Qué es Inspección Sanitaria?">
+      <p class="m-0" style="font-family: Verdana-Regular; font-size: 16px; text-align: justify;">
+        Es el subproceso mediante el cual se realiza la verificación de los objetos de Inspección, Vigilancia y Control Sanitario, con el fin de determinar que sus características cumplan con los estándares y requisitos establecidos en la normatividad vigente. Como resultado de la inspección sanitaria se puede originar una certificación o concepto sanitario, o la aplicación de medidas de control.
+      </p>
+    </p-fieldset>
+  </div>
+
+  <div class="fieldset-container">
+    <p-fieldset legend="¿Qué es Vigilancia Sanitaria?">
+      <p class="m-0" style="font-family: Verdana-Regular; font-size: 16px; text-align: justify;">
+        Es el subproceso mediante el cual se realiza el monitoreo (observación vigilante) de los objetos de inspección, vigilancia y control sanitario, con el objeto de que el asunto vigilado se mantenga dentro de parámetros esperados.
+      </p>
+    </p-fieldset>
+  </div>
+
+  <div class="fieldset-container">
+    <p-fieldset legend="¿Qué es Control Sanitario?">
+      <p class="m-0" style="font-family: Verdana-Regular; font-size: 16px; text-align: justify;">
+        Es el subproceso mediante el cual la autoridad sanitaria competente interviene para aplicar los correctivos sobre características o situaciones críticas o irregulares identificadas en los objetos de inspección y vigilancia.
+      </p>
+    </p-fieldset>
+  </div>
 </div>
