--- a/src/app/dashboard/pages/principal/principal.component.html
+++ b/src/app/dashboard/pages/principal/principal.component.html
@@ -2,7 +2,7 @@
 <titulo-tramite [title]="titulo" [subtitle]="subitulo" class="mt-2"></titulo-tramite>
 <div class="row mt-6">
   <div class="col-md-4 mb-4 mx-xs-2 ">
-  <a class="tarjeta-govco  vertical-tarjeta-govco cursor" title="Actualiza Informacion">
+  <a class="tarjeta-govco  vertical-tarjeta-govco cursor" title="Actualiza Informacion" routerLink="./actualizar">
 
       <div class="container-img-tarjeta-govco borderStyle">
         <img class="image-tarjeta-govco actualizaImg"
@@ -16,7 +16,7 @@
     </a>
     </div>
   <div class="col-md-4 mb-4 mx-xs-2 ">
-  <a class="tarjeta-govco  vertical-tarjeta-govco cursor" title="Realiza Auto Evaluacion">
+  <a class="tarjeta-govco  vertical-tarjeta-govco cursor" title="Realiza Auto Evaluacion" routerLink="./actualizar">
 
       <div class="container-img-tarjeta-govco borderStyle">
         <img class="image-tarjeta-govco autoImg"
