--- a/src/app/dashboard/pages/form-update/form-update.component.html
+++ b/src/app/dashboard/pages/form-update/form-update.component.html
@@ -443,9 +443,9 @@
 </div>
 
 
-  <div class="row mt-4">
+  <!-- <div class="row mt-4">
     {{myForm.value |  json}}
-  </div>
+  </div> -->
 </form>
 <!-- laoder -->
 <div class="mt-8" *ngIf="isLoading">
