--- a/src/app/dashboard/pages/form-update/form-update.component.html
+++ b/src/app/dashboard/pages/form-update/form-update.component.html
@@ -7,9 +7,10 @@
   <div class="col-md-12 mt-3 text-end">
     <a routerLink="/establecimientos/actualizar" class="btn btn-link">Cancelar</a>
    </div>
-     <h4 class="text-center">Actualización de datos</h4><br><br>
+     <h4 class="text-center">Establecimiento</h4><br><br>
      <h5 class="text-center"><b>NIT: </b>  <span class="text-success">{{establecimiento?.nit}}</span> | <b>Inscripcion: </b><span class="text-success">{{establecimiento?.inscripcion}}</span></h5>
      <h5 class="text-center"><b>Razon Social: </b>  <span class="text-success"> {{establecimiento?.razon_social}}</span></h5>
+     <h5 class="text-center"><b>Direccion: </b>  <span class="text-success"> {{establecimiento?.direccion}}</span></h5>
 
      <h6 class="mt-3">Datos Basicos del Establecimiento</h6>
       <hr>
