--- a/src/app/dashboard/pages/principal/principal.component.html
+++ b/src/app/dashboard/pages/principal/principal.component.html
@@ -16,7 +16,7 @@
     </a>
     </div>
   <div class="col-md-4 mb-4 mx-xs-2 ">
-  <a class="tarjeta-govco  vertical-tarjeta-govco cursor" title="Realiza Auto Evaluacion" routerLink="./actualizar">
+  <a class="tarjeta-govco  vertical-tarjeta-govco cursor" title="Realiza Auto Evaluacion" routerLink="./validar-autoevaluacion">
 
       <div class="container-img-tarjeta-govco borderStyle">
         <img class="image-tarjeta-govco autoImg"
@@ -45,6 +45,9 @@
       </div>
     </a>
     </div>
+    <div class="col-md-6 text-end">
+      <a routerLink="/" class="btn btn-link">Cancelar</a>
+  </div>
 
   </div>
 
