--- a/src/app/dashboard/pages/finaliza-autoevaluacion/finaliza-autoevaluacion.component.html
+++ b/src/app/dashboard/pages/finaliza-autoevaluacion/finaliza-autoevaluacion.component.html
@@ -3,7 +3,7 @@
   aria-live="assertive" aria-atomic="true" style="max-width: 70% !important">
   <div class="toast-header toast-header-success-govco">
       <span class="govco-svg govco-check-circle fs-mr" aria-label="info"></span>
-      <strong class="me-auto toast-title-govco">Registro Exitoso - NIT: {{dataStore[0].nit}}</strong>
+      <strong class="me-auto toast-title-govco">AutoEvaluación Exitosa - NIT: {{dataStore[0].nit}}</strong>
       <small class="toast-small-govco success">Hace x segundos</small>
       <!-- <a href="javascript:void(0)" role="button" data-bs-dismiss="modal"
           class="close-btn-toast" aria-label="Close" aria-expanded="false">
@@ -11,11 +11,17 @@
       </a> -->
   </div>
   <div class="toast-body toast-body-govco">
-      <p class="text-center" style="font-weight: bolder;">Este es el primer paso para realizar el tramite de solicitud del concepto sanitario.</p><br>
+    <div *ngIf="dataStore[0]?.mensaje; else noMensaje">
+      <h6 class="text-center text-warning">{{ dataStore[0].mensaje }}</h6>
+    </div>
+
+    <ng-template #noMensaje>
+    </ng-template>
+      <p class="text-center" style="font-weight: bolder;">Este es el segundo paso para realizar el tramite de solicitud del concepto sanitario.</p><br>
       <p>Debe seguir los siguientes pasos:</p>
       <ol>
         <li>Inscribirse ✅ </li>
-        <li>Realizar Auto Evaluación</li>
+        <li>Realizar Auto Evaluación ✅ </li>
         <li>Solicitar la visita del personal técnico</li>
       </ol>
       <p class="text-center">  No olvides conservar tu número de inscripción</p>
@@ -24,7 +30,7 @@
       <p class="text-center">{{dataStore[0].direccion}} {{dataStore[0].complemento_direccion}}</p>
       <div class="row ">
         <div class="col-md-6">
-          <a routerLink="/establecimientos/validar-autoevaluacion" class="btn btn-link">Auto-Evaluacion</a>
+          <a routerLink="/validar-autoevaluacion" class="btn btn-link">Solicitar Visita</a>
 
         </div>
         <div class="col-md-6 text-end">
@@ -35,3 +41,4 @@
 </div>
 
 </div>
+
